v 2.0.0
=======
Renamed collection-specific exceptions:
    - 'CumulativeOperationException' ==> `CollectionCumulativeOperationException`
    - 'InsertManyException' ==> `CollectionInsertManyException`
    - 'DeleteManyException' ==> `CollectionDeleteManyException`
    - 'UpdateManyException' ==> `CollectionUpdateManyException`
Introduced `InvalidEnvironmentException` for operations invalid on some Data API environments.
The following info methods are made async (= awaitable): `AsyncDatabase.info`, `AsyncDatabase.name`, `AsyncCollection.info`, `AsyncTable.info`
Collections default to using custom types for lossless and full-range expression of database content.
    - e.g. instead of 'datetime.datetime', instances of `DataAPITimestamp` are returned
    - Use the options' serdes_option to opt out and revert to non-custom data types
Renamed (collection-specific) "Result" classes like this:
    - 'DeleteResult' => `CollectionDeleteResult`
    - 'InsertOneResult' => `CollectionInsertOneResult`
    - 'InsertManyResult' => `CollectionInsertManyResult`
    - 'UpdateResult' => `CollectionUpdateResult`
Database (and AsyncDatabase): added a `.region` property
Database info: changed class name and attributes of `AstraDBAdminDatabaseInfo` (former 'AdminDatabaseInfo') and `AstraDBDatabaseInfo` (former 'DatabaseInfo')
Introduced `DataAPIVector` class (Iterable, Sequence): this also offers better control over vector binary serialization
Collections are optionally typed:
    - `get_collection` and `create_collection` get a `document_type` parameter to go with the type hint `Collection[MyType]`
    - if unspecified fall back to `DefaultCollection = Collection[DefaultDocumentType]` (where `DefaultDocumentType = dict[str, Any]`)
Cursors are similarly typed and are rewritten entirely:
    - `cursor.state` now has values in `CursorState` enum (take `cursor.state.value` for a string)
    - 'cursor.address' is removed from the API