@@ -173,6 +173,7 @@ class Table(Generic[ROW]):
             headers=self._commander_headers,
             callers=self.api_options.callers,
             redacted_header_names=self.api_options.redacted_header_names,
+            handle_decimals=True,
         )
         return api_commander
 
@@ -978,6 +979,7 @@ class AsyncTable(Generic[ROW]):
             headers=self._commander_headers,
             callers=self.api_options.callers,
             redacted_header_names=self.api_options.redacted_header_names,
+            handle_decimals=True,
         )
         return api_commander
 
