@@ -130,7 +130,7 @@ OUTPUT_ROW_TO_POSTPROCESS = {
     "p_float_minf": "-Infinity",
     "p_blob": {"$binary": "YWJjMTIz"},  # b"abc123",
     "p_uuid": "9c5b94b1-35ad-49bb-b118-8e8fc24abf80",
-    "p_decimal": 123.456,
+    "p_decimal": decimal.Decimal("123.456"),
     "p_date": "11111-09-30",
     "p_duration": "1mo1d1m1ns",
     "p_inet": "10.1.1.2",
@@ -278,7 +278,7 @@ EXPECTED_PREPROCESSED_ROW = {
     "d.datetime": "1724-04-22T04:05:06.789000+00:00",
     "d.date": "1724-04-22",
     "d.time": "04:05:06.789000",
-    "Decimal": 123.456,
+    "Decimal": decimal.Decimal("123.456"),
     "Decimal_nan": "NaN",
     "Decimal_pinf": "Infinity",
     "Decimal_ninf": "-Infinity",
